-Updated generators per personal preference

--- a/internals/generators/container/sagas.js.hbs
+++ b/internals/generators/container/sagas.js.hbs
@@ -1,4 +1,4 @@
-// import { take, call, put, select } from 'redux-saga/effects';
+// import { take, call, put, select } from 'redux-saga/effects'
 
 // Individual exports for testing
 export function* defaultSaga() {
@@ -8,4 +8,4 @@ export function* defaultSaga() {
 // All sagas to be loaded
 export default [
   defaultSaga,
-];
+]
