--- a/internals/generators/component/es6.js.hbs
+++ b/internals/generators/component/es6.js.hbs
@@ -4,15 +4,20 @@
 *
 */
 
-import React from 'react';
-// import styled from 'styled-components';
+import React, { Component } from 'react'
+import PropTypes from 'prop-types'
+// import styled from 'styled-components'
 
 {{#if wantMessages}}
-import { FormattedMessage } from 'react-intl';
-import messages from './messages';
+import { FormattedMessage } from 'react-intl'
+import messages from './messages'
 {{/if}}
 
-class {{ properCase name }} extends React.Component { // eslint-disable-line react/prefer-stateless-function
+class {{ properCase name }} extends Component { // eslint-disable-line react/prefer-stateless-function
+  static propTypes = {
+
+  }
+
   render() {
     return (
       <div>
@@ -20,12 +25,8 @@ class {{ properCase name }} extends React.Component { // eslint-disable-line rea
         <FormattedMessage {...messages.header} />
       {{/if}}
       </div>
-    );
+    )
   }
 }
 
-{{ properCase name }}.propTypes = {
-
-};
-
-export default {{ properCase name }};
+export default {{ properCase name }}
