--- a/internals/generators/component/stateless.js.hbs
+++ b/internals/generators/component/stateless.js.hbs
@@ -4,26 +4,26 @@
 *
 */
 
-import React from 'react';
-// import styled from 'styled-components';
+import PropTypes from 'prop-types'
+// import styled from 'styled-components'
 
 {{#if wantMessages}}
-import { FormattedMessage } from 'react-intl';
-import messages from './messages';
+import { FormattedMessage } from 'react-intl'
+import messages from './messages'
 {{/if}}
 
-function {{ properCase name }}() {
+const {{ properCase name }} = (props) => {
   return (
     <div>
     {{#if wantMessages}}
       <FormattedMessage {...messages.header} />
     {{/if}}
     </div>
-  );
+  )
 }
 
 {{ properCase name }}.propTypes = {
 
-};
+}
 
-export default {{ properCase name }};
+export default {{ properCase name }}
