--- a/internals/generators/container/sagas.test.js.hbs
+++ b/internals/generators/container/sagas.test.js.hbs
@@ -3,13 +3,13 @@
  */
 
 /* eslint-disable redux-saga/yield-effects */
-// import { take, call, put, select } from 'redux-saga/effects';
-// import { defaultSaga } from '../sagas';
+// import { take, call, put, select } from 'redux-saga/effects'
+// import { defaultSaga } from '../sagas'
 
-// const generator = defaultSaga();
+// const generator = defaultSaga()
 
 describe('defaultSaga Saga', () => {
   it('Expect to have unit tests specified', () => {
-    expect(true).toEqual(false);
-  });
-});
+    expect(true).toEqual(false)
+  })
+})
