--- a/internals/generators/container/selectors.js.hbs
+++ b/internals/generators/container/selectors.js.hbs
@@ -1,9 +1,9 @@
-import { createSelector } from 'reselect';
+import { createSelector } from 'reselect'
 
 /**
  * Direct selector to the {{ camelCase name }} state domain
  */
-const select{{ properCase name }}Domain = () => (state) => state.get('{{ camelCase name }}');
+const select{{ properCase name }}Domain = () => (state) => state.get('{{ camelCase name }}')
 
 /**
  * Other specific selectors
@@ -17,9 +17,9 @@ const select{{ properCase name }}Domain = () => (state) => state.get('{{ camelCa
 const makeSelect{{ properCase name }} = () => createSelector(
   select{{ properCase name }}Domain(),
   (substate) => substate.toJS()
-);
+)
 
-export default makeSelect{{ properCase name }};
+export default makeSelect{{ properCase name }}
 export {
   select{{ properCase name }}Domain,
-};
+}
