--- a/internals/generators/route/route.hbs
+++ b/internals/generators/route/route.hbs
@@ -4,6 +4,6 @@
       getComponent(location, cb) {
         import('{{{directory (properCase component)}}}')
           .then(loadModule(cb))
-          .catch(errorLoading);
+          .catch(errorLoading)
       },
     },$1
